# design-pattern

./: .gitignore
singleton/: Makefile.am  configure.ac
singleton/singleton/: Singleton.hpp
singleton/src/: main.cpp
singleton/src/singleton/: Singleton.cpp
