AC_INIT([singleton], [0.0.1], [taotaohsu@gmail.com])
AC_CONFIG_AUX_DIR([.])

AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])

AM_SILENT_RULES([yes])

AC_PROG_CXX
AC_LANG([C++])

# AC_CHECK_LIB([boost], [main], , [AC_MSG_ERROR([cannot find libboost])])

AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
